--- a/src/components/profile/profile/Profile.module.css
+++ b/src/components/profile/profile/Profile.module.css
@@ -54,7 +54,7 @@
   font-size: 24px;
   text-align: center;
   border-top: 1px solid #d3d5e3;
-  background-color: rgba(241, 241, 241, 0, 833);
+  background-color: rgba(241, 241, 241, 0.833);
 }
 
 .statsItemBordered {
@@ -66,7 +66,6 @@
   padding-bottom: 8px;
   color: #8a8b8e;
 }
-
 .quantity {
   font-weight: bold;
 }
