--- a/src/components/profile/Profile.module.css
+++ b/src/components/profile/Profile.module.css
@@ -1,6 +1,6 @@
 .profile {
   max-width: 40%;
-  margin-top: 3.125rem 0;
+  margin: 3.125rem 0;
   display: flex;
   flex-direction: column;
   align-items: center;
