--- a/src/components/statistics/Statistics.module.css
+++ b/src/components/statistics/Statistics.module.css
@@ -27,3 +27,40 @@
   padding: 0;
   list-style: none;
 }
+
+.statList > .statListItem,
+.statList > .statListItemNoTitle {
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+  text-shadow: 0 0 3px #000;
+}
+
+.statListItem:first-child {
+  border-radius: 0 0 0 0.5rem;
+}
+
+.statListItem:last-child {
+  border-radius: 0 0 0.5rem;
+}
+
+.statListItemNoTitle:first-child {
+  border-radius: 0.5rem 0 0 0.5rem;
+}
+
+.statListItemNoTitle:last-child {
+  border-radius: 0 0.5rem 0.5rem 0;
+}
+
+.label {
+  padding-top: 1.3rem;
+  font-size: 1rem;
+  color: #fff;
+}
+
+.percentage {
+  padding: 1.3rem;
+  font-size: 1.5rem;
+  font-weight: bold;
+  color: #fff;
+}
